Fix typo in multi_year_2019.ipynb
Kuberenetes >>> Kubernetes

--- a/sig-contributor-experience/surveys/multi_year_comparisons/multi_year_2019.ipynb
+++ b/sig-contributor-experience/surveys/multi_year_comparisons/multi_year_2019.ipynb
@@ -785,7 +785,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Most areas saw increases in contributors, with the exception of code inside Kubernetes/Kubernetes and other. This reflects the continuing effort to only keep core code in the Kubernetes/Kuberenetes repository, moving other contributions to additional repositories in the Kubernetes organization. "
+    "Most areas saw increases in contributors, with the exception of code inside Kubernetes/Kubernetes and other. This reflects the continuing effort to only keep core code in the Kubernetes/Kubernetes repository, moving other contributions to additional repositories in the Kubernetes organization. "
    ]
   },
   {
