fix: use https instead of http
fix: use https instead of http

--- a/sig-release/meeting-notes-archive/2019.md
+++ b/sig-release/meeting-notes-archive/2019.md
@@ -1777,7 +1777,7 @@ Proposed v1.10.13 release [@liggitt]
         * Have OWNERS of this subproject distinct from “release-team” subproject, eg: start with Branch Managers + PRMT (Patch Release Mgmt Team)
         * Process and procedures around release tooling and artifacts
         * Overlaps with #k8s-infra-team and #sig-testing perhaps, and especially #sig-cluster-lifecycle
-        * The members of this subproject would be OWNERS of[ http://git.k8s.io/release](http://git.k8s.io/release)  repo
+        * The members of this subproject would be OWNERS of[ https://git.k8s.io/release](https://git.k8s.io/release)  repo
     * Others:
         * PST (Product Security Team)? Who really owns this? Their docs live in k/sig-release, but they are a bit of an outlier on where they fit in the governance model.  Not our SIG Release issue to resolve right now, versus steering committee.  TBD...table for now.
         * Security? There is wg-security-audit, distinct from incident response (Product Security Team). But there’s artifact signing, release thread model, provenance, etc.  Could fall under PST, or under release engineering subproject.  TBD..table for now.
